--- a/wiki/DebmarshalRepositoryMirrorSetup.wiki
+++ b/wiki/DebmarshalRepositoryMirrorSetup.wiki
@@ -1,5 +1,5 @@
 #summary A simple Debmarshal managed mirror configuration
-#labels debmarshal,debian
+#labels debmarshal,debian,Ubuntu,Packages,deb
 
 = Introduction =
 
