Edited wiki page through web user interface.

--- a/wiki/DebmarshalRepositoryMirrorSetup.wiki
+++ b/wiki/DebmarshalRepositoryMirrorSetup.wiki
@@ -10,7 +10,52 @@ This is a prerequisite to having a repository of your own directly supervised pa
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+== debmirror ==
+
+* Allocate archive space
+
+Make sure /var/lib/debmarshal has sufficient space.  Allocate at least 40G per distribution and architecture, and probably its own filesystem so it can't fill /var.
+
+* Create debmarshal user
+A separate user will download and verify packages, and later maintain the upload queue and
+distribution tracks.
+{{{
+adduser --disabled-login debmarshal
+}}}
+
+* Install debmirror and gnupg
+{{{
+aptitude install debmirror gnupg
+}}}
+
+* Add repository keys
+{{{
+aptitude install debian-archive-keyring
+su - debmarshal
+gpg --import /usr/share/keyrings/debian-archive-keyring.gpg
+gpg --list-keys
+}}}
+
+* Archive pull
+
+Make sure archive pulls are working first, before setting up the debmarshal portion of the archive.
+
+/usr/local/bin/mirror-debian
+{{{
+/usr/bin/debmirror --debug -v --progress \
+        --method=http \
+        -h ftp.us.debian.org --root=/debian \
+        --dist=lenny \
+        --section=main,contrib,non-free,main/debian-installer \
+        --arch=i386,amd64 \
+        --nocleanup --source \
+        /var/lib/debmarshal/debian
+}}}
+
+/etc/cron.d/debian-mirror
+{{{
+MAILTO="debmarshal@localhost"
+PATH=/usr/local/bin:/usr/local/sbin:/usr/bin:/usr/sbin:/bin:/sbin
+10 15     * * *   root  su - debmarshall -c /usr/local/bin/mirror-debian
+}}}
+
