--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -24,16 +24,16 @@ time make -j4
 || Virtualization       || Build || Host time (s) || || || || ||
 ||                      ||       || T60p ^1^ || Atom ^2^ || Quad ^3^ ||
 ---
-|| chroot ^10^          ||   -j1 ||      64s ^20^ || || ||
+|| chroot ^a^          ||   -j1 ||      64s ^A^ || || ||
 ||                      ||   -j2 ||      37s ||
-|| chroot loopback ^11^ ||   -j1 ||    54s ^20^ ||  ||
+|| chroot loopback ^b^ ||   -j1 ||    54s ^A^ ||  ||
 ||                      ||   -j2 ||  36s ||  ||
 ||                      ||   -j4 ||  ||  ||
 || UML SKAS0            ||   -j1 ||  121s ||
 ||                      ||   -j2 ||  118s ||
 || UML SKAS0 hostfs     ||   -j1 ||  142s ||
 || UML SKAS0 hostfs     ||   -j2 ||  141s ||
-|| qemu ^12^            ||   -j1 || 1260s ||
+|| qemu ^c^            ||   -j1 || 1260s ||
 ||                      ||   -j2 || ||
 || qemu -smp 2          ||   -j1 || ||
 ||                      ||   -j2 ||
@@ -51,8 +51,8 @@ time make -j4
 
 ^3^ - HP T4300 Core2 Quad 3.4 GHz, x86_64
 
-^10^ - `mkdir lenny ; debootstrap _args_ lenny ; chroot lenny /bin/bash`
+^a^ - `mkdir lenny ; debootstrap _args_ lenny ; chroot lenny /bin/bash`
 
-^11^ - `dd if=/dev/zero bs=1M seek=1000 count=0 of=lenny.ext3 ; mkfs -t ext3 -F lenny.ext3 ; mkdir lenny ; mount -o loop lenny.ext3 lenny`
+^b^ - `dd if=/dev/zero bs=1M seek=1000 count=0 of=lenny.ext3 ; mkfs -t ext3 -F lenny.ext3 ; mkdir lenny ; mount -o loop lenny.ext3 lenny`
 
-^20^ - very unexpected that host filesystem is typically slower than loopback
+^A^ - very unexpected that host filesystem is typically slower than loopback
