--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -8,7 +8,7 @@ Often the slowest part of a test run is building the test source under a protect
 
 {{{
 aptitude install build-essential libncurses-dev wget
-wget -O empire-4.3.10.tar.gz http://sourceforge.net/project/showfiles.php?group_id=24031&package_id=40131&release_id=537696
+wget -O empire-4.3.10.tar.gz 'http://sourceforge.net/project/showfiles.php?group_id=24031&package_id=40131&release_id=537696'
 tar zxvf empire-4.3.10.tar.gz
 cd empire-4.3.10
 ./configure
