--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -23,19 +23,17 @@ time make -j4
 
 || Virtualization       || Build || Host time (s) || || || || ||
 ||                      ||       || T60p ^1^ || Atom ^2^ || Quad ^3^ ||
-|| chroot ^a^          ||   -j1 ||      64s ^A^ || 150s ^B^ ||
-||                      ||   -j2 ||      37s || || ^B^ || 
-|| chroot loopback ^b^ ||   -j1 ||    54s ^A^ ||  ||
-||                      ||   -j2 ||  36s ||  ||
-||                      ||   -j4 ||  ||  ||
-|| UML SKAS0            ||   -j1 ||  121s ||
-||                      ||   -j2 ||  118s ||
-|| UML SKAS0 hostfs     ||   -j1 ||  142s ||
-|| UML SKAS0 hostfs     ||   -j2 ||  141s ||
-|| qemu ^c^            ||   -j1 || 1260s ||
-||                      ||   -j2 || || 1479s ||
-|| qemu -smp 2          ||   -j1 || ||
-||                      ||   -j2 ||
+|| chroot ^a^           ||   -j1 ||  64s ^A^ || 150s ^B^ ||
+||                      ||   -j2 ||      37s || 112s ^B^ || 
+|| chroot loopback ^b^  ||   -j1 ||  54s ^A^ ||          ||
+||                      ||   -j2 ||  36s     ||          ||
+|| UML SKAS0            ||   -j1 ||  121s    ||
+||                      ||   -j2 ||  118s    ||
+|| UML SKAS0 hostfs     ||   -j1 ||  142s    ||
+|| UML SKAS0 hostfs     ||   -j2 ||  141s    ||
+|| qemu ^c^             ||   -j1 || 1260s    ||
+||                      ||   -j2 || 1479s    ||
+|| qemu -smp 2          ||   -j2 ||          ||
 || qemu -smp 4          ||   -j4 || || || ||
 || kvm                  ||   -j1 || ||
 ||                      ||   -j2 || ||
@@ -44,11 +42,11 @@ time make -j4
 || xen                  ||   -j1 || ||
 ||                      ||   -j2 || ||
 
-^1^ - Lenovo Thinkpad T60p, 2G, 2.17GHz Core Duo, Debian/sid 2009-07.  host FS is on a LUKS encrypted partition
+^1^ - Lenovo Thinkpad T60p, 2G, 2.17GHz Core Duo, 2.6.30 Debian/sid 2009-07.  host FS is on a LUKS encrypted partition
 
-^2^ - Intel G945 1.6GHz, Debian/lenny.  Host FS is unencrypted 1TB 7200rpm drive
+^2^ - Intel G945 1.6GHz, 2.6.26 Debian/lenny.  Host FS is unencrypted 1TB 7200rpm drive
 
-^3^ - HP T4300 Core2 Quad 3.4 GHz, x86_64
+^3^ - HP T4300 Core2 Quad 3.4 GHz, Ubuntu/hardy 2.6.24 x86_64 host
 
 ^a^ - `mkdir lenny ; debootstrap _args_ lenny ; chroot lenny /bin/bash`
 
