--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -44,8 +44,8 @@ time make -j4
 || UML SKAS0 hostfs     ||   -j2 ||  141s    ||
 || qemu ^c^             ||   -j1 || 1260s    ||
 ||                      ||   -j2 || 1479s    ||
-|| qemu -smp 2          ||   -j2 ||          ||
-|| qemu -smp 4          ||   -j4 || || || ||
+|| qemu ^c^ -smp 2          ||   -j2 ||          ||
+|| qemu ^c^ -smp 4          ||   -j4 || || || ||
 || kvm                  ||   -j1 || ||
 ||                      ||   -j2 || ||
 || openvz               ||   -j1 || ||
