Edited wiki page through web user interface.

--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -45,10 +45,12 @@ time make -j4
 || UML SKAS0 hostfs     ||   -j2 ||  141s    ||
 || i386 qemu ^c^        ||   -j1 || 1260s    ||
 ||                      ||   -j2 || 1479s    ||
-|| i386 qemu ^c^ -smp 2 ||   -j2 ||          ||
+|| i386 qemu ^c^ -smp 2 ||   -j2 || 1450s    ||
+|| x86_64 qemu          ||   -j1 ||  ||  ||
 || i386 qemu ^c^ -smp 4 ||   -j4 || || || ||
-|| i386 kvm             ||   -j1 || ||
-||                      ||   -j2 || ||
+|| i386 kvm             ||   -j1 || || _N/A_ ||
+||                      ||   -j2 || || _N/A_ ||
+|| x86_64 kvm           ||   -j1 || _N/A_ || _N/A_ || ||
 || i386 openvz          ||   -j1 || ||
 ||                      ||   -j2 || ||
 || x86_64 openvz        ||   -j1 || _N/A_ || 149s ||
