Edited wiki page through web user interface.

--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -51,9 +51,10 @@ time make -j4
 || i386 kvm             ||   -j1 || || _N/A_ ||
 ||                      ||   -j2 || || _N/A_ ||
 || x86_64 kvm           ||   -j1 || _N/A_ || _N/A_ || ||
-|| i386 openvz          ||   -j1 || ||
-||                      ||   -j2 || ||
-|| x86_64 openvz        ||   -j1 || _N/A_ || 149s ||
+|| i386 openvz          ||   -j1 || || 149s ||
+||                      ||   -j2 || || 107s ||
+||                      ||   -j4 || || 
+|| x86_64 openvz        ||   -j1 || _N/A_ || ||
 ||                      ||   -j2 || _N/A_ || ||
 || xen                  ||   -j1 || ||
 ||                      ||   -j2 || ||
