--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -74,3 +74,7 @@ time make -j4
 ^A^ - very unexpected that host filesystem is typically slower than loopback
 
 ^B^ - not actually chrooted, build timed in native Debian/lenny OS.
+
+== Warnings ==
+
+  Verify that the local clock is accurate.  Some run slow under some virtualization engines. QEMU, and UML are particularly susceptible to this.  time an ssh session into the machine that sleeps for a known amount of time.
