--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -47,13 +47,15 @@ time make -j4
 ||                      ||   -j2 || 1479s    ||
 || i386 qemu ^c^ -smp 2 ||   -j2 || 1450s    ||
 || x86_64 qemu          ||   -j1 ||  ||  ||
+|| i386 kqemu           ||   -j1 || 
+|| x86_64 kqemu         ||
 || i386 qemu ^c^ -smp 4 ||   -j4 || || || ||
 || i386 kvm             ||   -j1 || || _N/A_ ||
 ||                      ||   -j2 || || _N/A_ ||
 || x86_64 kvm           ||   -j1 || _N/A_ || _N/A_ || ||
 || i386 openvz          ||   -j1 || || 149s ||
 ||                      ||   -j2 || || 107s ||
-||                      ||   -j4 || || 
+||                      ||   -j4 || || 105s ||
 || x86_64 openvz        ||   -j1 || _N/A_ || ||
 ||                      ||   -j2 || _N/A_ || ||
 || xen                  ||   -j1 || ||
