--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -51,6 +51,7 @@ time make -j4
 || x86_64 kqemu         ||   -j2 || _N/A_^C^ ||
 || i386 kvm             ||   -j1 || 72s || _N/A_^B^ ||
 ||                      ||   -j2 || 75s || _N/A_^B^ ||
+|| i386 kvm -smp 2      ||   -j2 || 40s || _N/A_^B^ ||
 || x86_64 kvm           ||   -j1 || _N/A_^C^ || _N/A_^B^ || ||
 || i386 openvz          ||   -j1 || || 149s ||
 ||                      ||   -j2 || || 107s ||
