--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -38,7 +38,8 @@ time make -j4
 ||                      ||   -j2 ||     37s || ||
 || i386 chroot loopback^b^ || -j1 || 54s^A^ ||          ||
 ||                      ||   -j2 ||  36s    ||          ||
-|| x86_64 chroot^b^     || -j1   || _N/A_   || ||
+|| x86_64 chroot^b^     || -j1   || _N/A_^C^   || 148s ||
+||                      || -j2   || _N/A_^C^   || 112s ||
 || UML SKAS0            ||   -j1 ||  121s   || ||
 ||                      ||   -j2 ||  118s   ||
 || UML SKAS0 hostfs     ||   -j1 ||  142s   ||
@@ -47,7 +48,7 @@ time make -j4
 ||                      ||   -j2 || 1479s   ||
 || i386 qemu^c^ -smp 2  ||   -j2 || 1450s   ||
 || x86_64 qemu          ||   -j1 ||  ||  ||
-|| i386 kqemu           ||   -j1 || _N/A_^C^ ||
+|| i386 kqemu           ||   -j1 ||  ||
 || x86_64 kqemu         ||   -j2 || _N/A_^C^ ||
 || i386 kvm             ||   -j1 || 72s || _N/A_^B^ ||
 ||                      ||   -j2 || 75s || _N/A_^B^ ||
