x86_64 Atom openvz times

--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -57,7 +57,7 @@ time make -j4
 || i386 openvz          ||   -j1 || || 149s ||
 ||                      ||   -j2 || || 107s ||
 ||                      ||   -j4 || || 105s ||
-|| x86_64 openvz        ||   -j1 || _N/A_^C^ || ||
+|| x86_64 openvz        ||   -j1 || _N/A_^C^ || 148s ||
 ||                      ||   -j2 || _N/A_^C^ || 114s ||
 || xen^b^               ||   -j1 || ||
 ||                      ||   -j2 || ||
