--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -34,13 +34,16 @@ time make -j4
 
 || Virtualization       || Build || Host time (s) || || || || ||
 ||                      ||       || T60p^1^ || Atom^2^ || Quad^3^ ||
-|| i386 chroot^a^       ||   -j1 ||  64s^A^ || 140s ||
-||                      ||   -j2 ||     37s || 106s ||
-|| i386 chroot loopback^b^ || -j1 || 54s^A^ ||          ||
-||                      ||   -j2 ||  36s    ||          ||
-|| x86_64 chroot^b^     || -j1   || _N/A_^C^   || 148s ||
-||                      || -j2   || _N/A_^C^   || 112s ||
-|| UML SKAS0            ||   -j1 ||  121s   || ||
+|| i386 chroot^a^       ||   -j1 ||  64s^A^ || 140s    ||         ||
+||                      ||   -j2 ||     37s || 106s    ||         ||
+|| i386 chroot loopback^b^ || -j1 || 54s^A^ ||         ||
+||                      ||   -j2 ||  36s    ||         ||
+|| x86_64 chroot^b^     || -j1   || _N/A_^C^ || 148s   ||
+||                      || -j2   || _N/A_^C^ || 112s   ||
+|| x86_64 chroot loopback || -j1 || _N/A_^C^ ||        || 40s     ||
+||                        || -j2 || _N/A_^C^ ||        || 21s     ||
+||                        || -j2 || _N/A_^C^ ||        || 14s     ||
+|| UML SKAS0            ||   -j1 ||  121s   ||         ||
 ||                      ||   -j2 ||  118s   ||
 || UML SKAS0 hostfs     ||   -j1 ||  142s   ||
 || UML SKAS0 hostfs     ||   -j2 ||  141s   ||
@@ -66,7 +69,7 @@ time make -j4
 
 ^2^ - Intel G945 1.6GHz, 2.6.26 Debian/lenny x86_64 host.  1G RAM. Host FS is unencrypted 1TB 7200rpm drive
 
-^3^ - HP T4300 Core2 Quad 3.4 GHz, Ubuntu/hardy 2.6.24 x86_64 host.  8G RAM.
+^3^ - Dell 2950, 2x2 2.66 GHz Xeon, 4G RAM, 6x10K SCSI RAID5.
 
 ^a^ - `mkdir lenny ; debootstrap --arch=i386 _args_ lenny ; chroot lenny /bin/bash`
 
