--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -60,10 +60,12 @@ time make -j4
 || i386 openvz          ||   -j1 || 53s || 149s ||
 ||                      ||   -j2 || 39s || 107s ||
 ||                      ||   -j4 || || 105s ||
-|| x86_64 openvz        ||   -j1 || _N/A_^C^ || 148s ||
-||                      ||   -j2 || _N/A_^C^ || 114s ||
-|| xen^b^               ||   -j1 || hot^D^ ||
-||                      ||   -j2 || hot^D^ ||
+|| x86_64 openvz        ||   -j1 || _N/A_^C^ || 148s   ||
+||                      ||   -j2 || _N/A_^C^ || 114s   ||
+|| xen^b^               ||   -j1 || hot^D^  ||         || 38s     ||
+||                      ||   -j2 || hot^D^  ||         || 39s     ||
+|| xen^b^ - 4 vcpu      ||   -j1 || hot^D^  ||         ||
+||                      ||   -j4 || hot^D^  ||         ||
 
 ^1^ - Lenovo Thinkpad T60p, 2G RAM, 2.17GHz Core Duo, 2.6.30 Debian/sid 2009-07.  host FS is on a LUKS encrypted partition
 
