--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -62,10 +62,13 @@ time make -j4
 ||                      ||   -j4 || || 105s ||
 || x86_64 openvz        ||   -j1 || _N/A_^C^ || 148s   ||
 ||                      ||   -j2 || _N/A_^C^ || 114s   ||
-|| xen^b^               ||   -j1 || hot^D^  ||         || 38s     ||
-||                      ||   -j2 || hot^D^  ||         || 39s     ||
-|| xen^b^ - 4 vcpu      ||   -j1 || hot^D^  ||         ||
-||                      ||   -j4 || hot^D^  ||         ||
+|| i386 xen^b^          ||   -j1 || hot^D^  ||         ||         ||
+||                      ||   -j2 || hot^D^  ||         ||         ||
+|| x86_64 xen^b^        ||   -j1 || _N/A_^C^ ||        || 38s     ||
+||                      ||   -j2 || _N/A_^C^ ||        || 39s     ||
+|| 4cpu x86_64 xen      ||   -j1 || _N/A_^C^ ||        || 40s     ||
+||                      ||   -j2 || _N/A_^C^ ||        || 21s     ||
+||                      ||   -j4 || _N/A_^C^ ||        || 14s     ||
 
 ^1^ - Lenovo Thinkpad T60p, 2G RAM, 2.17GHz Core Duo, 2.6.30 Debian/sid 2009-07.  host FS is on a LUKS encrypted partition
 
