--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -32,12 +32,13 @@ time make -j4
 
 = Results =
 
-|| Virtualization       || Build || Host time (s) || || || || ||
+|| Virtualization       || Build || Host time (s) || || || || || ||
 ||                      ||       || T60p^1^ || Atom^2^ || Quad^3^ ||
 || i386 chroot^a^       ||   -j1 ||  64s^A^ || 140s    ||         ||
 ||                      ||   -j2 ||     37s || 106s    ||         ||
-|| i386 chroot loopback^b^ || -j1 || 54s^A^ ||         ||
-||                      ||   -j2 ||  36s    ||         ||
+|| i386 chroot loopback^b^ || -j1 || 54s^A^ ||         || 39s     ||
+||                      ||   -j2 ||  36s    ||         || 21s     ||
+||                      ||   -j4 ||         ||         || 13s     ||
 || x86_64 chroot^b^     || -j1   || _N/A_^C^ || 148s   ||
 ||                      || -j2   || _N/A_^C^ || 112s   ||
 || x86_64 chroot loopback || -j1 || _N/A_^C^ ||        || 40s     ||
