Dell 2950 i386 xen times.

--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -66,8 +66,8 @@ time make -j4
 ||                      ||   -j4 || || 105s ||
 || x86_64 openvz        ||   -j1 || _N/A_^C^ || 148s   ||
 ||                      ||   -j2 || _N/A_^C^ || 114s   ||
-|| i386 xen^b^          ||   -j1 || hot^D^  ||         ||         ||
-||                      ||   -j2 || hot^D^  ||         ||         ||
+|| i386 xen^b^          ||   -j1 || hot^D^  ||         || 38s     ||
+||                      ||   -j2 || hot^D^  ||         || 39s     ||
 || x86_64 xen^b^        ||   -j1 || _N/A_^C^ ||        || 38s     ||
 ||                      ||   -j2 || _N/A_^C^ ||        || 39s     ||
 || 4cpu x86_64 xen      ||   -j1 || _N/A_^C^ ||        || 40s     ||
