--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -101,4 +101,4 @@ power and thermal considerations.
 
 == Warnings ==
 
-  Verify that the local clock is accurate.  Some run slow under some virtualization engines. QEMU, and UML are particularly susceptible to this.  time an ssh session into the machine that sleeps for a known amount of time.
+  Verify that the local clock is accurate.  Some run slow under some virtualization engines. QEMU and UML are particularly susceptible to this.  time an ssh session into the machine that sleeps for a known amount of time.
