Replace capital letter superscripts with symbols for improved distinction from lower-case footnotes.

--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -34,41 +34,41 @@ time make -j4
 
 || Virtualization       || Build || Host time (s) || || || || || ||
 || *Containers*         ||       || T60p^1^ || Atom^2^ || Quad^3^ ||
-|| i386 chroot^a^       ||   -j1 ||  64s^A^ || 140s    || 39s     ||
+|| i386 chroot^a^       ||   -j1 ||  64s^*^ || 140s    || 39s     ||
 ||                      ||   -j2 ||     37s || 106s    || 20s     ||
 ||                      ||   -j4 ||         ||         || 13s     ||
-|| i386 chroot loopback^b^ || -j1 || 54s^A^ ||         || 39s     ||
+|| i386 chroot loopback^b^ || -j1 || 54s^*^ ||         || 39s     ||
 ||                      ||   -j2 ||  36s    ||         || 21s     ||
 ||                      ||   -j4 ||         ||         || 13s     ||
-|| x86_64 chroot^b^     || -j1   || _N/A_^C^ || 148s   || 40s     ||
-||                      || -j2   || _N/A_^C^ || 112s   || 21s     ||
-||                      || -j4   || _N/A_^C^ ||        || 14s     ||
-||                      || -j8   || _N/A_^C^ ||        || 12s     ||
-|| x86_64 chroot loopback || -j1 || _N/A_^C^ ||        || 40s     ||
-||                        || -j2 || _N/A_^C^ ||        || 21s     ||
-||                        || -j2 || _N/A_^C^ ||        || 14s     ||
+|| x86_64 chroot^b^     || -j1   || _N/A_^@^ || 148s   || 40s     ||
+||                      || -j2   || _N/A_^@^ || 112s   || 21s     ||
+||                      || -j4   || _N/A_^@^ ||        || 14s     ||
+||                      || -j8   || _N/A_^@^ ||        || 12s     ||
+|| x86_64 chroot loopback || -j1 || _N/A_^@^ ||        || 40s     ||
+||                        || -j2 || _N/A_^@^ ||        || 21s     ||
+||                        || -j2 || _N/A_^@^ ||        || 14s     ||
 || i386 openvz          ||   -j1 || 53s || 149s ||
 ||                      ||   -j2 || 39s || 107s ||
 ||                      ||   -j4 || || 105s ||
-|| x86_64 openvz        ||   -j1 || _N/A_^C^ || 148s   ||
-||                      ||   -j2 || _N/A_^C^ || 114s   ||
+|| x86_64 openvz        ||   -j1 || _N/A_^@^ || 148s   ||
+||                      ||   -j2 || _N/A_^@^ || 114s   ||
 ||                      || Build || Host time (s) || || || || || ||
 || i386 vserver         ||
-|| x86_64 vserver       ||       || _N/A_^C^ ||
+|| x86_64 vserver       ||       || _N/A_^@^ ||
 || *Paravirtualization* ||       || T60p^1^ || Atom^2^ || Quad^3^ ||
 || UML SKAS0            ||   -j1 ||  121s   ||         ||
 ||                      ||   -j2 ||  118s   ||
 || UML SKAS0 hostfs     ||   -j1 ||  142s   ||
 || UML SKAS0 hostfs     ||   -j2 ||  141s   ||
-|| i386 xen^b^          ||   -j1 || hot^D^  ||         || 38s     ||
-||                      ||   -j2 || hot^D^  ||         || 39s     ||
-|| x86_64 xen^b^        ||   -j1 || _N/A_^C^ ||        || 38s     ||
-||                      ||   -j2 || _N/A_^C^ ||        || 39s     ||
-|| 4cpu x86_64 xen      ||   -j1 || _N/A_^C^ ||        || 40s     ||
-||                      ||   -j2 || _N/A_^C^ ||        || 21s     ||
-||                      ||   -j4 || _N/A_^C^ ||        || 14s     ||
+|| i386 xen^b^          ||   -j1 || hot^+^  ||         || 38s     ||
+||                      ||   -j2 || hot^+^  ||         || 39s     ||
+|| x86_64 xen^b^        ||   -j1 || _N/A_^@^ ||        || 38s     ||
+||                      ||   -j2 || _N/A_^@^ ||        || 39s     ||
+|| 4cpu x86_64 xen      ||   -j1 || _N/A_^@^ ||        || 40s     ||
+||                      ||   -j2 || _N/A_^@^ ||        || 21s     ||
+||                      ||   -j4 || _N/A_^@^ ||        || 14s     ||
 || i386 virtualbox      ||
-|| x86_64 virtualbox    ||       || _N/A_^C^ ||
+|| x86_64 virtualbox    ||       || _N/A_^@^ ||
 ||                      || Build || Host time (s) || || || || || ||
 || *Full virtualiztion* ||       || T60p^1^ || Atom^2^ || Quad^3^ ||
 || i386 qemu^c^         ||   -j1 || 1260s   ||
@@ -76,13 +76,13 @@ time make -j4
 || i386 qemu^c^ -smp 2  ||   -j2 || 1450s   ||
 || x86_64 qemu          ||   -j1 ||  ||  ||
 || i386 kqemu           ||   -j1 ||  ||
-|| x86_64 kqemu         ||   -j2 || _N/A_^C^ ||
-|| i386 kvm             ||   -j1 || 72s || _N/A_^B^ ||
-||                      ||   -j2 || 75s || _N/A_^B^ ||
-|| i386 kvm -smp 2      ||   -j2 || 40s || _N/A_^B^ ||
-|| x86_64 kvm           ||   -j1 || _N/A_^C^ || _N/A_^B^ || ||
+|| x86_64 kqemu         ||   -j2 || _N/A_^@^ ||
+|| i386 kvm             ||   -j1 || 72s || _N/A_^&^ ||
+||                      ||   -j2 || 75s || _N/A_^&^ ||
+|| i386 kvm -smp 2      ||   -j2 || 40s || _N/A_^&^ ||
+|| x86_64 kvm           ||   -j1 || _N/A_^@^ || _N/A_^&^ || ||
 || i386 xen hvm         ||
-|| x86_64 xen hvm       ||       || _N/A_^C^ ||
+|| x86_64 xen hvm       ||       || _N/A_^@^ ||
 
 ^1^ - Lenovo Thinkpad T60p, 2G RAM, 2.17GHz Core Duo, 2.6.30 Debian/sid 2009-07.  host FS is on a LUKS encrypted partition
 
@@ -98,16 +98,13 @@ time make -j4
 
 ^d^ - `qemu -m 256M -hda lenny.ext3 -net nic -net tap,ifname=tap0,script=no -kernel /boot/vmlinuz-2.6.30-1-686 -initrd /boot/initrd.img-2.6.30-1-686 -append root=/dev/hda`
 
-^A^ - very unexpected that host filesystem is typically slower than loopback
+^*^ - very unexpected that host filesystem is typically slower than loopback
 
-^B^ - No harware virtualization (vmx/svm) CPU feature flag.
+^&^ - No harware virtualization (vmx/svm) CPU feature flag.
 
-^C^ - No 64bit (lm) CPU feature flag.
+^@^ - No 64bit (lm) CPU feature flag.
 
-^D^ - Xen runs CPUs at full clock rate, and caused multiple thermal
-shutdowns before file-backed VMs could be debugged on this platform.
-so no numbers are available.  Running Xen on a laptop is a bad idea on
-power and thermal considerations.
+^+^ - Xen runs CPUs at full clock rate, and caused multiple thermal shutdowns before file-backed VMs could be debugged on this platform. No performance numbers are available pending cooling improvements.  Running Xen on a laptop is a bad idea on power and thermal considerations.
 
 == Warnings ==
 
