--- a/wiki/VirtualCompileBenchmarks.wiki
+++ b/wiki/VirtualCompileBenchmarks.wiki
@@ -32,7 +32,7 @@ time make -j4
 
 = Results =
 
-|| Virtualization       || Build || Host time (s) || || || || || ||
+||                      || Build || time(s) || || || || || ||
 || *Containers*         ||       || T60p^1^ || Atom^2^ || Quad^3^ ||
 || i386 chroot^a^       ||   -j1 ||  64s^*^ || 140s    || 39s     ||
 ||                      ||   -j2 ||     37s || 106s    || 20s     ||
@@ -52,9 +52,9 @@ time make -j4
 ||                      ||   -j4 || || 105s ||
 || x86_64 openvz        ||   -j1 || _N/A_^@^ || 148s   ||
 ||                      ||   -j2 || _N/A_^@^ || 114s   ||
-||                      || Build || Host time (s) || || || || || ||
 || i386 vserver         ||
 || x86_64 vserver       ||       || _N/A_^@^ ||
+||                      || Build || Host time (s) || || || || || ||
 || *Paravirtualization* ||       || T60p^1^ || Atom^2^ || Quad^3^ ||
 || UML SKAS0            ||   -j1 ||  121s   ||         ||
 ||                      ||   -j2 ||  118s   ||
